弾丸のグラフィック変更

--- a/WAVE/WAVE/WAVE.vcxproj.filters
+++ b/WAVE/WAVE/WAVE.vcxproj.filters
@@ -141,6 +141,9 @@
     <ClCompile Include="ObjEnemyJump2.cpp">
       <Filter>ObjEnemy</Filter>
     </ClCompile>
+    <ClCompile Include="ObjBossSL.cpp">
+      <Filter>ObjEnemy</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="CObjAngleBullet.h">
@@ -278,6 +281,9 @@
     <ClInclude Include="ObjDescription.h" />
     <ClInclude Include="SceneDescription.h" />
     <ClInclude Include="ObjEnemyJump2.h">
+      <Filter>ObjEnemy</Filter>
+    </ClInclude>
+    <ClInclude Include="ObjBossSL.h">
       <Filter>ObjEnemy</Filter>
     </ClInclude>
   </ItemGroup>
