--- a/WAVE/WAVE/WAVE.vcxproj.filters
+++ b/WAVE/WAVE/WAVE.vcxproj.filters
@@ -23,7 +23,6 @@
     <ClCompile Include="ObjHero.cpp" />
     <ClCompile Include="ObjItem.cpp" />
     <ClCompile Include="ObjMain.cpp" />
-    <ClCompile Include="ObjRevolutionBullet.cpp" />
     <ClCompile Include="ObjTime.cpp" />
     <ClCompile Include="SceneBlock2.cpp" />
     <ClCompile Include="SceneBlock3.cpp" />
@@ -54,7 +53,6 @@
       <Filter>敵</Filter>
     </ClCompile>
     <ClCompile Include="SceneDescription.cpp" />
-    <ClCompile Include="ObjDescription.cpp" />
     <ClCompile Include="ObjEnemyJump2.cpp">
       <Filter>敵</Filter>
     </ClCompile>
@@ -79,6 +77,13 @@
     <ClCompile Include="COHomingBullet.cpp">
       <Filter>Bullet</Filter>
     </ClCompile>
+    <ClCompile Include="ObjLastBoss.cpp" />
+    <ClCompile Include="ObjBoss1.cpp" />
+    <ClCompile Include="ObjBoss2.cpp" />
+    <ClCompile Include="ObjRevolutionBullet.cpp">
+      <Filter>Bullet</Filter>
+    </ClCompile>
+    <ClCompile Include="ObjDescription.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="ObjCursor.h" />
@@ -102,7 +107,6 @@
     <ClInclude Include="ObjHero.h" />
     <ClInclude Include="ObjItem.h" />
     <ClInclude Include="ObjMain.h" />
-    <ClInclude Include="ObjRevolutionBullet.h" />
     <ClInclude Include="ObjTime.h" />
     <ClInclude Include="SceneBlock2.h" />
     <ClInclude Include="SceneBlock3.h" />
@@ -133,7 +137,6 @@
       <Filter>敵</Filter>
     </ClInclude>
     <ClInclude Include="SceneDescription.h" />
-    <ClInclude Include="ObjDescription.h" />
     <ClInclude Include="ObjEnemyJump2.h">
       <Filter>敵</Filter>
     </ClInclude>
@@ -158,6 +161,13 @@
     <ClInclude Include="COHomingBullet.h">
       <Filter>Bullet</Filter>
     </ClInclude>
+    <ClInclude Include="ObjLastBoss.h" />
+    <ClInclude Include="ObjBoss1.h" />
+    <ClInclude Include="ObjBoss2.h" />
+    <ClInclude Include="ObjRevolutionBullet.h">
+      <Filter>Bullet</Filter>
+    </ClInclude>
+    <ClInclude Include="ObjDescription.h" />
   </ItemGroup>
   <ItemGroup>
     <Filter Include="敵">
